green-commute-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bc-ingress
  labels:
    name: bc-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
   ingressClassName: nginx      
   rules:
   - host: www.greencommute.gq
     http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: greenc-bcf
            port:
              number: 80
